layout alignment fixed

--- a/TopUI.Blazor.Bootstrap/Styles/Components/button.scss
+++ b/TopUI.Blazor.Bootstrap/Styles/Components/button.scss
@@ -1,4 +1,5 @@
 ﻿.tui-btn{
     display: flex;
+    align-items: center;
     gap: calc(var(--bs-gutter-x) * 0.3);
 }
