--- a/TopUI.Blazor.Bootstrap/wwwroot/bootstrap.blazor.bundle.css
+++ b/TopUI.Blazor.Bootstrap/wwwroot/bootstrap.blazor.bundle.css
@@ -744,6 +744,7 @@
 
 .tui-btn {
   display: flex;
+  align-items: center;
   gap: calc(var(--bs-gutter-x) * 0.3);
 }
 
